--- a/protercar html.html
+++ b/protercar html.html
@@ -2,52 +2,139 @@
 <html lang="pt-BR">
 <head>
   <meta charset="UTF-8">
-  <title>Consulta de Veículos</title>
+  <title>Protercar - Consulta de Veículos</title>
+  <link rel="icon" type="image/png" href="PR Protercar2.png">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
   <style>
     body {
-      font-family: Arial, sans-serif;
-      margin: 40px;
-      background-color: #f5f7fa;
+      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+      margin: 0;
+      padding: 0;
+      background: linear-gradient(180deg, #b90000 0%, #d19a00 100%);
+      min-height: 100vh;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
     }
+
+    header {
+      text-align: center;
+      padding: 40px 20px 10px 20px;
+    }
+
+    header img {
+      width: 190px;
+      max-width: 90%;
+      animation: flutuar 4s ease-in-out infinite;
+    }
+
+    @keyframes flutuar {
+      0%, 100% { transform: translateY(0); }
+      50% { transform: translateY(-6px); }
+    }
+
     h2 {
-      color: #333;
+      color: #222;
+      margin-top: 15px;
+      text-shadow: 1px 1px 2px rgba(255,255,255,0.6);
     }
+
+    .container {
+      background-color: #fff;
+      padding: 30px 25px;
+      border-radius: 12px;
+      box-shadow: 0 3px 10px rgba(0,0,0,0.2);
+      width: 90%;
+      max-width: 550px;
+      margin-bottom: 50px;
+      text-align: center;
+    }
+
     input {
-      width: 250px;
-      padding: 8px;
+      width: 70%;
+      padding: 10px;
+      border: 1px solid #ccc;
+      border-radius: 6px;
+      font-size: 16px;
       margin-right: 10px;
-      border-radius: 4px;
-      border: 1px solid #aaa;
+      transition: all 0.3s;
     }
+
+    input:focus {
+      border-color: #d19a00;
+      box-shadow: 0 0 5px #d19a00;
+      outline: none;
+    }
+
     button {
-      padding: 8px 14px;
-      cursor: pointer;
-      background-color: #0078ff;
-      color: white;
+      padding: 10px 16px;
+      background-color: #b00000;
       border: none;
-      border-radius: 4px;
+      border-radius: 6px;
+      color: white;
+      font-size: 15px;
+      cursor: pointer;
+      transition: background 0.3s;
     }
+
     button:hover {
-      background-color: #005fcb;
+      background-color: #8d0000;
     }
+
     .resultado {
       margin-top: 20px;
       padding: 12px;
       border: 1px solid #ddd;
-      border-radius: 5px;
-      background: #fff;
-      box-shadow: 0 0 5px rgba(0,0,0,0.05);
+      border-radius: 6px;
+      background: #fafafa;
+      box-shadow: 0 1px 3px rgba(0,0,0,0.1);
+      text-align: left;
+    }
+
+    .erro {
+      color: red;
+      font-weight: bold;
+    }
+
+    footer {
+      text-align: center;
+      padding: 15px;
+      color: #fff;
+      font-size: 14px;
+      background: rgba(0,0,0,0.2);
+      width: 100%;
+    }
+
+    @media (max-width: 600px) {
+      input {
+        width: 100%;
+        margin-bottom: 10px;
+      }
+      button {
+        width: 100%;
+      }
     }
   </style>
 </head>
 <body>
-  <h2>Consulta de Veículos</h2>
-  <p>Digite o nome ou parte do nome do veículo (ex: <i>argo 2010</i> ou <i>civic</i>):</p>
+  <header>
+    <img src="PR Protercar2.png" alt="Logo Protercar">
+  </header>
 
-  <input id="busca" placeholder="Ex: argo 2010" />
-  <button onclick="buscar()">Buscar</button>
+  <div class="container">
+    <h2>Consulta de Veículos</h2>
+    <p>Digite o nome ou parte do nome do veículo (ex: <i>argo 2010</i>):</p>
 
-  <div id="resultado"></div>
+    <input id="busca" placeholder="Ex: argo 2010">
+    <button onclick="buscar()">Buscar</button>
+
+    <div id="resultado"></div>
+  </div>
+
+  <footer>
+    © 2025 PROTERCAR Proteção Veicular — Todos os direitos reservados.
+  </footer>
 
   <script>
     async function buscar() {
@@ -56,18 +143,18 @@
       container.innerHTML = "<p>Buscando...</p>";
 
       if (!busca) {
-        container.innerHTML = "<p style='color:red;'>Digite algo para buscar.</p>";
+        container.innerHTML = "<p class='erro'>Digite algo para buscar.</p>";
         return;
       }
 
-      const url = 'https://script.google.com/macros/s/AKfycbx6DwD2gUVXsZTcgZmCOxJUgWKow4ENtE65JB47iIPX57jLA3Swk14wXkxtm7Tfs0yL/exec?busca=' + encodeURIComponent(busca);
+      const url = 'https://script.google.com/macros/s/AKfycbzawqqM2pyO1dM-q2VPzBzlGXV5dXOBQhBSnEz3vU9iKt_h0w_JCGnbmaWhTvTNQwmo/exec?busca=' + encodeURIComponent(busca);
 
       try {
         const resp = await fetch(url);
         const data = await resp.json();
 
         if (data[0].erro) {
-          container.innerHTML = `<p style="color:red;">${data[0].erro}</p>`;
+          container.innerHTML = `<p class='erro'>${data[0].erro}</p>`;
         } else {
           let html = "<h3>Resultados encontrados:</h3>";
           data.forEach(item => {
@@ -82,7 +169,7 @@
           container.innerHTML = html;
         }
       } catch (err) {
-        container.innerHTML = `<p style="color:red;">Erro ao buscar dados: ${err.message}</p>`;
+        container.innerHTML = `<p class='erro'>Erro ao buscar dados: ${err.message}</p>`;
       }
     }
   </script>
