--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
       border-radius: 12px;
       box-shadow: 0 4px 12px rgba(0,0,0,0.15);
       width: 90%;
-      max-width: 600px;
+      max-width: 700px;
       margin: 40px auto 60px auto;
       text-align: center;
       animation: fadeInUp 1s ease-out;
@@ -158,6 +158,8 @@
 <body>
   <header>
     <img src="PR Protercar2.png" alt="Logo Protercar">
+    <h1>PROTERCAR</h1>
+    <h3>Proteção Veicular</h3>
   </header>
 
   <div class="container">
@@ -211,6 +213,8 @@
             html += `
               <div class="resultado">
                 <p><b>Veículo:</b> ${item.veiculo}</p>
+                <p><b>Marca:</b> ${item.marca}</p>
+                <p><b>Tipo:</b> ${item.tipo}</p>
                 <p><b>Mensalidade:</b> R$ ${mensalidade}</p>
                 <p><b>Franquia:</b> R$ ${franquia}</p>
               </div>
