--- a/index.html
+++ b/index.html
@@ -158,13 +158,11 @@
 <body>
   <header>
     <img src="PR Protercar2.png" alt="Logo Protercar">
-    <h1>PROTERCAR</h1>
-    <h3>Proteção Veicular</h3>
   </header>
 
   <div class="container">
     <h2>Consulta de Veículos</h2>
-    <p>Digite o nome ou parte do nome do veículo (ex: <i>Argo 2010</i> ou <i>Civic</i>):</p>
+    <p>Digite o nome ou parte do nome do veículo (ex: <i>Argo 2010</i> ou <i>Corol 2015</i>):</p>
 
     <input id="busca" placeholder="Ex: argo 2010">
     <button onclick="buscar()">Buscar</button>
@@ -176,6 +174,10 @@
     © 2025 Protercar Proteção Veicular — Todos os direitos reservados
   </footer>
 
+  <footer>
+    © Desenvolvido por Felhipe Sobral
+  </footer>
+  
   <script>
     // Formata valores monetários no padrão contábil brasileiro (1.000,00)
     function formatarMoeda(valor) {
