--- a/index.html
+++ b/index.html
@@ -1,348 +1,313 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Consulta de Veículos - PROTERCAR</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Consulta de Veículos</title>
+
   <style>
-    body {
-      font-family: "Segoe UI", Arial, sans-serif;
+    /* ---------- GERAL ---------- */
+    * {
       margin: 0;
       padding: 0;
-      background-color: #f3f4f6;
-      color: #333;
+      box-sizing: border-box;
+      font-family: "Poppins", sans-serif;
     }
 
-    /* Cabeçalho */
-    header {
-      background-color: #fff;
-      text-align: center;
-      padding: 20px 10px;
-      box-shadow: 0 2px 6px rgba(0, 0, 0, 0.1);
-      position: relative;
-      z-index: 2;
-    }
-
-    header img {
-      max-width: 280px;
-      height: auto;
-    }
-
-    /* Faixa gradiente com efeito de brilho */
-    .faixa-gradiente {
-      position: relative;
-      background: linear-gradient(90deg, #c40000 0%, #800000 100%);
-      height: 8px;
-      width: 100%;
+    body {
+      height: 100vh;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      background: linear-gradient(180deg, #2b0000 0%, #4a0000 35%, #7a0000 60%, #9a0000 80%, #c70000 100%);
       overflow: hidden;
+      color: #ffdd55;
     }
 
-    .faixa-gradiente::after {
+    /* ---------- GRADIENTE ANIMADO SOBREPOSTO ---------- */
+    body::before {
       content: "";
       position: absolute;
-      top: 0;
-      left: -200px;
-      width: 200px;
-      height: 100%;
-      background: linear-gradient(120deg, rgba(255,255,255,0.5), rgba(255,255,255,0));
-      animation: brilho 4s linear infinite;
+      inset: 0;
+      background: linear-gradient(-45deg, rgba(255, 0, 0, 0.6), rgba(255, 170, 0, 0.4), rgba(255, 0, 0, 0.6), rgba(255, 200, 0, 0.4));
+      background-size: 400% 400%;
+      animation: moverGradiente 12s ease infinite;
+      z-index: 0;
+      opacity: 0.8;
     }
 
-    @keyframes brilho {
-      0% { left: -200px; }
-      100% { left: 100%; }
+    @keyframes moverGradiente {
+      0% { background-position: 0% 50%; }
+      50% { background-position: 100% 50%; }
+      100% { background-position: 0% 50%; }
     }
 
-    /* Container principal */
     main {
+      position: relative;
+      z-index: 2;
+      width: 90%;
       max-width: 900px;
-      margin: 40px auto;
-      background: #fff;
       padding: 30px;
-      border-radius: 16px;
-      box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
-      transition: all 0.4s ease;
+      border-radius: 20px;
+      background: rgba(0, 0, 0, 0.6);
+      box-shadow: 0 0 25px rgba(255, 0, 0, 0.4);
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      animation: fadeIn 1s ease-in-out;
     }
 
     h1 {
+      font-size: 2rem;
+      color: #ffec80;
       text-align: center;
-      color: #b30000;
-      font-size: 1.8rem;
       margin-bottom: 25px;
-      position: relative;
+      text-shadow: 0 0 10px rgba(255, 220, 0, 0.6);
     }
 
-    h1::after {
-      content: "";
-      display: block;
-      width: 80px;
-      height: 4px;
-      background: linear-gradient(90deg, #ff0000, #ffcc00);
-      margin: 10px auto 0;
-      border-radius: 2px;
-    }
-
-    input {
+    #buscaContainer {
+      display: flex;
+      justify-content: center;
       width: 100%;
-      padding: 12px;
+      gap: 10px;
+      margin-bottom: 20px;
+    }
+
+    input[type="text"] {
+      width: 70%;
+      padding: 10px;
+      border: none;
       border-radius: 8px;
-      border: 1px solid #ccc;
       font-size: 1rem;
-      margin-bottom: 15px;
-      box-sizing: border-box;
+      outline: none;
+      color: #222;
     }
 
     button {
-      width: 100%;
-      background-color: #b30000;
-      color: white;
+      padding: 10px 20px;
       border: none;
-      padding: 12px;
       border-radius: 8px;
+      background: linear-gradient(90deg, #ffae00, #ff3c00);
+      color: #fff;
+      font-weight: bold;
       cursor: pointer;
-      font-size: 1rem;
-      font-weight: 600;
-      transition: background-color 0.3s ease, transform 0.2s;
+      transition: 0.3s;
+      box-shadow: 0 0 10px rgba(255, 200, 0, 0.5);
     }
 
     button:hover {
-      background-color: #ffcc00;
-      color: #222;
-      transform: scale(1.03);
+      transform: scale(1.05);
+      box-shadow: 0 0 20px rgba(255, 200, 0, 0.7);
     }
 
-    /* Alertas */
-    .alerta {
-      padding: 15px;
-      border-radius: 10px;
-      margin-bottom: 20px;
-      font-weight: 500;
+    #novaBuscaBtn {
       display: none;
+      margin-top: 15px;
+      background: linear-gradient(90deg, #ff4e00, #ffb300);
     }
 
-    .alerta-info {
-      background-color: #fff3cd;
-      color: #856404;
-      border: 1px solid #ffeeba;
-    }
-
-    .alerta-critico {
-      background-color: #f8d7da;
-      color: #721c24;
-      border: 1px solid #f5c6cb;
-    }
-
-    /* Tabela */
+    /* ---------- TABELA ---------- */
     table {
       width: 100%;
       border-collapse: collapse;
-      margin-top: 20px;
+      margin-top: 15px;
+      color: #ffec80;
     }
 
     th, td {
       padding: 10px;
-      text-align: left;
-      border-bottom: 1px solid #eee;
+      text-align: center;
+      border-bottom: 1px solid rgba(255, 255, 255, 0.2);
     }
 
     th {
-      background-color: #b30000;
-      color: white;
+      background: rgba(255, 0, 0, 0.3);
     }
 
-    td {
-      background-color: #fffafa;
+    tr:hover {
+      background: rgba(255, 255, 0, 0.1);
     }
 
+    /* ---------- ALERTAS ---------- */
+    .alerta {
+      display: none;
+      margin-top: 15px;
+      padding: 12px;
+      border-radius: 10px;
+      width: 100%;
+      font-size: 0.95rem;
+      text-align: left;
+    }
+
+    .alerta-info {
+      background: rgba(255, 200, 0, 0.15);
+      border-left: 5px solid #ffca28;
+      color: #ffef91;
+    }
+
+    .alerta-critico {
+      background: rgba(255, 0, 0, 0.2);
+      border-left: 5px solid #ff3c00;
+      color: #ffbcbc;
+    }
+
+    /* ---------- RESULTADO ---------- */
     .nenhum-resultado {
+      color: #ffcb00;
+      font-weight: bold;
       text-align: center;
-      color: #888;
       margin-top: 20px;
-      font-style: italic;
     }
 
-    /* Loader */
+    .fade-in {
+      animation: fadeIn 0.7s ease-in-out;
+    }
+
+    @keyframes fadeIn {
+      from { opacity: 0; transform: translateY(10px); }
+      to { opacity: 1; transform: translateY(0); }
+    }
+
     .loader {
-      border: 4px solid #f3f3f3;
-      border-top: 4px solid #ffcc00;
+      border: 4px solid rgba(255,255,255,0.2);
+      border-top: 4px solid #ffb300;
       border-radius: 50%;
-      width: 30px;
-      height: 30px;
-      margin: 0 auto 10px auto;
+      width: 40px;
+      height: 40px;
       animation: spin 1s linear infinite;
+      margin: 0 auto 10px auto;
     }
 
     @keyframes spin {
       0% { transform: rotate(0deg); }
       100% { transform: rotate(360deg); }
     }
-
-    /* Botão Nova Busca */
-    .nova-busca {
-      background-color: #ffcc00;
-      color: #222;
-      border: none;
-      padding: 10px 20px;
-      border-radius: 8px;
-      cursor: pointer;
-      font-weight: 600;
-      transition: all 0.3s ease;
-      display: none; /* começa invisível */
-    }
-
-    .nova-busca:hover {
-      background-color: #e6b800;
-      transform: scale(1.05);
-    }
-
-    /* Animação suave para resultados */
-    .fade-in {
-      opacity: 0;
-      transform: translateY(10px);
-      animation: fadeSlideIn 0.6s forwards;
-    }
-
-    @keyframes fadeSlideIn {
-      to {
-        opacity: 1;
-        transform: translateY(0);
-      }
-    }
   </style>
 </head>
 
 <body>
-  <header>
-    <img src="PR Protercar2.png" alt="Logomarca Protercar" />
-  </header>
-  <div class="faixa-gradiente"></div>
-
   <main>
-  <h1>Consulta de Veículos</h1>
+    <h1>Consulta de Veículos</h1>
 
-  <div id="buscaContainer">
-    <input type="text" id="busca" placeholder="Digite o modelo do veículo (ex: Voyage 2015)" />
-    <button onclick="buscar()">Buscar</button>
-  </div>
+    <div id="buscaContainer">
+      <input type="text" id="busca" placeholder="Digite o modelo do veículo (ex: Voyage 2015)" />
+      <button onclick="buscar()">Buscar</button>
+    </div>
 
-  <div style="display: flex; justify-content: flex-end; margin-top: 10px;">
-    <button id="novaBuscaBtn" class="nova-busca" onclick="novaBusca()">Nova busca</button>
-  </div>
+    <div style="display: flex; justify-content: flex-end; width: 100%;">
+      <button id="novaBuscaBtn" onclick="novaBusca()">Nova busca</button>
+    </div>
 
-  <!-- ALERTAS -->
-  <div id="alertaInfo" class="alerta alerta-info">
-    ⚠️ <b>Informativos:</b><br>
-    Não trabalhamos com carro a diesel.<br>
-    Em caso de carro reserva, <b>INFORMAR acréscimo de R$20,00</b> na parcela mensal.
-  </div>
+    <div id="alertaInfo" class="alerta alerta-info">
+      ⚠️ <b>Alerta informativo:</b><br>
+      Não trabalhamos com carro a diesel.<br>
+      Em caso de carro reserva, <b>INFORMAR acréscimo de R$20,00</b> na parcela mensal.
+    </div>
 
-  <div id="alertaCritico" class="alerta alerta-critico">
-    🚫 <b>Atenção:</b><br>
-    O serviço de rastreamento é incluso para veículos tabela FIPE acima de 30 mil, mediante análise interna e não deve ser cobrado separadamente.
-  </div>
+    <div id="alertaCritico" class="alerta alerta-critico">
+      🚫 <b>Alerta crítico:</b><br>
+      O serviço de rastreamento é incluso para veículos tabela FIPE acima de 30 mil, mediante análise interna e não deve ser cobrado separadamente.
+    </div>
 
-  <!-- RESULTADOS -->
-  <div id="resultado"></div>
-</main>
+    <div id="resultado"></div>
+  </main>
 
   <script>
-    const url = "https://script.google.com/macros/s/AKfycbzxgVJUCfSk2r_Ts6OUCt68JsNVw8FjRzyfBKuVH6cznamz2HretWnHV4gCOR86OkAO/exec?busca=";
+    const url = "https://script.google.com/macros/s/AKfycby_qrBYcS7VjV_0iEvuTiWbXJdTszw5S2ktBkn9hEavlxG9oH5kFctfKhKMb-JjFFhC/exec?busca=";
 
     function formatarValor(valor) {
-      if (!valor || isNaN(valor.replace(/[^\d,.-]/g, ''))) return valor;
-      return parseFloat(valor.replace(/[^\d,.-]/g, '').replace(',', '.'))
-        .toLocaleString("pt-BR", { minimumFractionDigits: 2, maximumFractionDigits: 2 });
+      if (!valor || isNaN(valor)) return valor;
+      return parseFloat(valor).toLocaleString('pt-BR', { minimumFractionDigits: 2 });
     }
 
-async function buscar() {
-  const termo = document.getElementById("busca").value.trim();
-  const divResultado = document.getElementById("resultado");
-  const alertaInfo = document.getElementById("alertaInfo");
-  const alertaCritico = document.getElementById("alertaCritico");
-  const novaBuscaBtn = document.getElementById("novaBuscaBtn");
-  const buscaContainer = document.getElementById("buscaContainer");
+    async function buscar() {
+      const termo = document.getElementById("busca").value.trim();
+      const divResultado = document.getElementById("resultado");
+      const alertaInfo = document.getElementById("alertaInfo");
+      const alertaCritico = document.getElementById("alertaCritico");
+      const novaBuscaBtn = document.getElementById("novaBuscaBtn");
+      const buscaContainer = document.getElementById("buscaContainer");
 
-  divResultado.innerHTML = "";
-  alertaInfo.style.display = "none";
-  alertaCritico.style.display = "none";
-  novaBuscaBtn.style.display = "none";
+      divResultado.innerHTML = "";
+      alertaInfo.style.display = "none";
+      alertaCritico.style.display = "none";
+      novaBuscaBtn.style.display = "none";
 
-  if (!termo) {
-    divResultado.innerHTML = "<p class='nenhum-resultado'>Digite algo para buscar.</p>";
-    return;
-  }
+      if (!termo) {
+        divResultado.innerHTML = "<p class='nenhum-resultado'>Digite algo para buscar.</p>";
+        return;
+      }
 
-  // esconde a busca
-  buscaContainer.style.display = "none";
+      buscaContainer.style.display = "none";
 
-  divResultado.innerHTML = `
-    <div style="text-align:center; padding:20px;">
-      <div class="loader"></div>
-      <p>Buscando informações, aguarde...</p>
-    </div>
-  `;
-
-  try {
-    const resposta = await fetch(url + encodeURIComponent(termo));
-    const data = await resposta.json();
-
-    if (data[0].erro) {
-      divResultado.innerHTML = `<p class='nenhum-resultado fade-in'>${data[0].erro}</p>`;
-      novaBuscaBtn.style.display = "block";
-      return;
-    }
-
-    alertaInfo.style.display = "block";
-    alertaCritico.style.display = "block";
-
-    let tabela = `
-      <div class="fade-in">
-        <table>
-          <thead>
-            <tr>
-              <th>VEÍCULO</th>
-              <th>MENSALIDADE (R$)</th>
-              <th>FRANQUIA (R$)</th>
-              <th>MARCA</th>
-              <th>TIPO</th>
-            </tr>
-          </thead>
-          <tbody>
-    `;
-
-    data.forEach(item => {
-      tabela += `
-        <tr>
-          <td>${item.veiculo}</td>
-          <td>${formatarValor(item.mensalidade)}</td>
-          <td>${formatarValor(item.franquia)}</td>
-          <td>${item.marca}</td>
-          <td>${item.tipo}</td>
-        </tr>
+      divResultado.innerHTML = `
+        <div style="text-align:center; padding:20px;">
+          <div class="loader"></div>
+          <p>Buscando informações, aguarde...</p>
+        </div>
       `;
-    });
 
-    tabela += "</tbody></table></div>";
-    divResultado.innerHTML = tabela;
+      try {
+        const resposta = await fetch(url + encodeURIComponent(termo));
+        const data = await resposta.json();
 
-    novaBuscaBtn.style.display = "block";
+        if (data[0].erro) {
+          divResultado.innerHTML = `<p class='nenhum-resultado fade-in'>${data[0].erro}</p>`;
+          novaBuscaBtn.style.display = "block";
+          return;
+        }
 
-  } catch (erro) {
-    divResultado.innerHTML = `<p class='nenhum-resultado fade-in'>Erro ao buscar dados. Verifique a conexão.</p>`;
-    novaBuscaBtn.style.display = "block";
-  }
-}
+        alertaInfo.style.display = "block";
+        alertaCritico.style.display = "block";
 
-function novaBusca() {
-  document.getElementById("busca").value = "";
-  document.getElementById("resultado").innerHTML = "";
-  document.getElementById("alertaInfo").style.display = "none";
-  document.getElementById("alertaCritico").style.display = "none";
-  document.getElementById("novaBuscaBtn").style.display = "none";
-  document.getElementById("buscaContainer").style.display = "block";
-  document.getElementById("busca").focus();
-}
+        let tabela = `
+          <div class="fade-in">
+            <table>
+              <thead>
+                <tr>
+                  <th>VEÍCULO</th>
+                  <th>MENSALIDADE (R$)</th>
+                  <th>FRANQUIA (R$)</th>
+                  <th>MARCA</th>
+                  <th>TIPO</th>
+                </tr>
+              </thead>
+              <tbody>
+        `;
 
+        data.forEach(item => {
+          tabela += `
+            <tr>
+              <td>${item.veiculo}</td>
+              <td>${formatarValor(item.mensalidade)}</td>
+              <td>${formatarValor(item.franquia)}</td>
+              <td>${item.marca}</td>
+              <td>${item.tipo}</td>
+            </tr>
+          `;
+        });
+
+        tabela += "</tbody></table></div>";
+        divResultado.innerHTML = tabela;
+
+        novaBuscaBtn.style.display = "block";
+
+      } catch (erro) {
+        divResultado.innerHTML = `<p class='nenhum-resultado fade-in'>Erro ao buscar dados. Verifique a conexão.</p>`;
+        novaBuscaBtn.style.display = "block";
+      }
+    }
+
+    function novaBusca() {
+      document.getElementById("busca").value = "";
+      document.getElementById("resultado").innerHTML = "";
+      document.getElementById("alertaInfo").style.display = "none";
+      document.getElementById("alertaCritico").style.display = "none";
+      document.getElementById("novaBuscaBtn").style.display = "none";
+      document.getElementById("buscaContainer").style.display = "flex";
+      document.getElementById("busca").focus();
+    }
   </script>
 </body>
 </html>
