--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
   <title>Consulta de Veículos - PROTERCAR</title>
 
   <style>
-    /* ---------- GERAL ---------- */
     * {
       margin: 0;
       padding: 0;
@@ -30,7 +29,7 @@
       content: "";
       position: fixed;
       inset: 0;
-      background: linear-gradient(-45deg, rgba(255, 0, 0, 0.6), rgba(255, 170, 0, 0.4), rgba(255, 0, 0, 0.6), rgba(255, 200, 0, 0.4));
+      background: linear-gradient(-45deg, rgba(255, 0, 0, 0.5), rgba(255, 170, 0, 0.3), rgba(255, 0, 0, 0.5), rgba(255, 200, 0, 0.3));
       background-size: 400% 400%;
       animation: moverGradiente 12s ease infinite;
       z-index: 0;
@@ -49,16 +48,16 @@
       z-index: 2;
       width: 100%;
       text-align: center;
-      padding: 25px 0 15px;
-      background: rgba(0, 0, 0, 0.55);
-      backdrop-filter: blur(5px);
-      box-shadow: 0 2px 15px rgba(0, 0, 0, 0.6);
+      padding: 35px 0 25px;
+      background: linear-gradient(180deg, #ffffff 0%, #ffd6d6 40%, #ff6b6b 75%, #b30000 100%);
+      box-shadow: 0 2px 15px rgba(0, 0, 0, 0.25);
+      border-bottom: 2px solid rgba(255, 0, 0, 0.3);
     }
 
     header img {
       width: 260px;
       height: auto;
-      filter: drop-shadow(0 0 6px rgba(255, 255, 0, 0.4));
+      filter: drop-shadow(0 0 8px rgba(255, 200, 0, 0.6));
     }
 
     /* ---------- CONTEÚDO PRINCIPAL ---------- */
@@ -70,7 +69,7 @@
       padding: 35px 30px;
       margin-top: 25px;
       border-radius: 20px;
-      background: rgba(0, 0, 0, 0.65);
+      background: rgba(0, 0, 0, 0.7);
       box-shadow: 0 0 25px rgba(255, 0, 0, 0.4);
       display: flex;
       flex-direction: column;
@@ -127,7 +126,6 @@
       background: linear-gradient(90deg, #ff4e00, #ffb300);
     }
 
-    /* ---------- TABELA ---------- */
     table {
       width: 100%;
       border-collapse: collapse;
@@ -149,7 +147,6 @@
       background: rgba(255, 255, 0, 0.1);
     }
 
-    /* ---------- ALERTAS ---------- */
     .alerta {
       display: none;
       margin-top: 15px;
@@ -224,8 +221,8 @@
 
     <div id="alertaInfo" class="alerta alerta-info">
       ⚠️ <b>Informativo:</b><br>
-      - Não trabalhamos com carro a diesel.<br>
-      - Em caso de carro reserva, <b>INFORMAR acréscimo de R$20,00</b> na mensalidade.
+      Não trabalhamos com carro a diesel.<br>
+      Em caso de carro reserva, <b>INFORMAR acréscimo de R$20,00</b> na parcela mensal.
     </div>
 
     <div id="alertaCritico" class="alerta alerta-critico">
