--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@
   <main>
     <h1>Consulta de Veículos</h1>
 
-    <input type="text" id="busca" placeholder="Digite o modelo do veículo (ex: Argo 2010)" />
+    <input type="text" id="busca" placeholder="Veículo Ano (ex: Argo 2010 ou Biz 2018)" />
     <button id="btnBuscar" onclick="buscar()">Buscar</button>
     <button id="novaBusca" onclick="novaBusca()">Nova busca</button>
 
